--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-hello world!
+欢迎小宝贝来我滴小网站，时不时更新一点小玩意儿哟！
+以后你要记得时不时来check updating !!
+Surprise is everywhere especially you got a Programmer NPY right!
+浮生偷得半日闲， all my mind was filled with LOVE with you!
+wuhu !!
