--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
 <title>我和小宝贝的小网站</title>
 </head>
 <body>
-    <h1>日志</h1>
+    <h1>我和小宝贝的网站</h1>
+    <p>简介：每天更新点小东东，顺便每天学点html来玩玩，最重要的还是tensorflow啦嘻嘻嘻</p>
+    <p>不知道小小宝贝多久会来看看呢？哈哈哈哈</p>
+    <h1>更新日志</h1>
     <p>2020.10.30</p>
+    <p>爱你小宝贝。昨天你想买鞋鞋，原来我答应帮你买马丁靴滴，但是到了月末再加上我买了去看你的车票，就的确没有什么钱啦😊看你没能买到</p>
+    <p>有一点不开心的样子，希望你能理解猪猪哦💝</p>
 </body>
 </html>
