--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <h1>我和小宝贝的网站</h1>
     <p>简介：每天更新点小东东，顺便每天学点html来玩玩，最重要的还是tensorflow啦嘻嘻嘻</p>
     <p>不知道小小宝贝多久会来看看呢？哈哈哈哈</p>
+    <h1>Issue</h1>
+    <p>网站内容和修改以后，别的设备访问内容仍然显示之前的内容，清理了浏览器缓存后，即可正常访问新的内容，如何解决</p>
     <h1>更新日志</h1>
     <p>2020.10.30</p>
     <p>爱你小宝贝。昨天你想买鞋鞋，原来我答应帮你买马丁靴滴，但是到了月末再加上我买了去看你的车票，就的确没有什么钱啦😊看你没能买到</p>
