--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     <p>2020.10.30</p>
     <p>爱你小宝贝。昨天你想买鞋鞋，原来我答应帮你买马丁靴滴，但是到了月末再加上我买了去看你的车票，就的确没有什么钱啦😊看你没能买到</p>
     <p>有一点不开心的样子，希望你能理解猪猪哦💝</p>
-    <img loading="love" src="https://github.com/Thomaszz4/Thomaszz4.github.io/blob/master/Sources/love.jpeg" width="258" height="39" />
+    <img loading="love" src="/Sources/love.jpeg" width="258" height="39" />
 </body>
 </html>
