--- a/issue.html
+++ b/issue.html
@@ -1,1 +1,12 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8">
+<title>Issues</title>
+</head>
+<body>
 
+<h1>Issue Collection</h1>
+<p>In Processing😁</p>
+</body>
+</html>
