--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <p>爱你小宝贝。昨天你想买鞋鞋，原来我答应帮你买马丁靴滴，但是到了月末再加上我买了去看你的车票，就的确没有什么钱啦😊看你没能买到</p>
     <p>有一点不开心的样子，希望你能理解猪猪哦💝</p>
     <img loading="love" src="/Sources/love.jpeg" width="1164" height="682" />
-    <a href="issue.thml">这是一个链接</a>
+    <a href="issue.thml">Issues</a>
 </body>
 </html>
