--- a/index.html
+++ b/index.html
@@ -9,10 +9,16 @@
     <p>简介：每天更新点小东东，顺便每天学点html来玩玩，最重要的还是tensorflow啦嘻嘻嘻</p>
     <p>不知道小小宝贝多久会来看看呢？哈哈哈哈</p>
     <h1>更新日志</h1>
+    <p>2020.11.1</p>
+    <p>爱你小宝贝。昨天恭喜你呀，获得咯第一，去年以0.01分（？）遗憾输给了法学院，今年好像超过第二名好多好多分呢！小宝贝棒棒哒！昨天，也是LOL全球总决赛的日子，我们中国赛区LPL的SN遗憾1:3败给了韩国赛区LCK的DWG， sn的5个小伙子真的打得很好，虽然留下了遗憾，但是战过，就值啦！我们的人生也是一样的，并不是每个人都会成功，因为只有成功者才会被人记住，但是失败者呢？假设有一天，我们也成为了失败者，也要能做到，败不馁。成功也能做到，胜不骄。方可成就强者心态。芜湖！共勉之小可爱</p>
+    <img src="Sources/金秋艺术节.JPG">
+    <p>2020.10.31</p>
+    <p>爱你小宝贝。今天晚上要去跳舞啦💃啦！辛苦了那么久终于可以展示咯，恭喜你呀！我感觉你成长了好多呢，大一的时候，你碰到那种作业和跳舞之间的冲突，你会感觉到烦躁，偶尔会变得比较低沉，但是现在给我感觉你越来越坚强啦！每天都是朝气蓬勃，还要被猪猪气哈哈哈哈哈，但是你还是快快乐乐滴！加油小宝贝，我们一起越变越好哦</p>
     <p>2020.10.30</p>
     <p>爱你小宝贝。昨天你想买鞋鞋，原来我答应帮你买马丁靴滴，但是到了月末再加上我买了去看你的车票，就的确没有什么钱啦😊看你没能买到</p>
     <p>有一点不开心的样子，希望你能理解猪猪哦💝</p>
     <img loading="love" src="/Sources/love.jpeg" width="1164" height="682" />
+
     <a href="/issue.html">Issues</a>
 </body>
 </html>
