--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <p>简介：每天更新点小东东，顺便每天学点html来玩玩，最重要的还是tensorflow啦嘻嘻嘻</p>
     <p>不知道小小宝贝多久会来看看呢？哈哈哈哈</p>
     <h1>更新日志</h1>
+    <h2>2020.11.2</h2>
+    <p>爱你小宝贝。今天猪猪要考概率论咯！所以要好好复习，等我考试结束再来更新啦！你要乖乖滴，懂了没有😯</p>
     <h2>2020.11.1</h2>
     <p>爱你小宝贝。昨天恭喜你呀，获得咯第一，去年以0.01分（？）遗憾输给了法学院，今年好像超过第二名好多好多分呢！小宝贝棒棒哒！昨天，也是LOL全球总决赛的日子，我们中国赛区LPL的SN遗憾1:3败给了韩国赛区LCK的DWG， sn的5个小伙子真的打得很好，虽然留下了遗憾，但是战过，就值啦！我们的人生也是一样的，并不是每个人都会成功，因为只有成功者才会被人记住，但是失败者呢？假设有一天，我们也成为了失败者，也要能做到，败不馁。成功也能做到，胜不骄。方可成就强者心态。芜湖！共勉之小可爱</p>
     <img src="Sources/金秋艺术节.JPG">
