--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
     <p>不知道小小宝贝多久会来看看呢？哈哈哈哈</p>
     <h1>更新日志</h1>
     <h2>2020.11.2</h2>
-    <p>爱你小宝贝。今天猪猪要考概率论咯！所以要好好复习，等我考试结束再来更新啦！你要乖乖滴，懂了没有😯</p>
+    <span style="text-decoration:line-through;">爱你小宝贝。今天猪猪要考概率论咯！所以要好好复习，等我考试结束再来更新啦！你要乖乖滴，懂了没有😯</span>
+    <p>爱你小宝贝！小宝小宝，我已经到宿舍啦！今天给了我一个大惊喜哦！嘻嘻嘻开心开心。考完试除了开心以外，还想马上拿起手机去看看我的小妞妞在干什么<br>
+      有没有想我之类滴！没想到一出来就给了我一个大惊喜哈哈哈哈哈！爱你小宝贝。你准备惊喜的时候肯定也很开心哈哈哈哈，因为想看到对方收到你惊喜的时候开心的样子<BR>
+    嘻嘻嘻而且还去安排咯，花时间去找哪个排名高了，哪个好喝啦，还安排好时机，让我一出来就能喝到嘻嘻嘻。太开心啦！小宝，恋爱中这种很细小的细节，真的能够让我们都很感动<br>
+    哈哈哈小笨蛋都说咯要给请你喝奶茶，你倒请我啦嘻嘻嘻，还让舍友蹭了一杯，不想给他嘻嘻嘻。下次我也要请你们宿舍喝奶茶哦，你什么时候想喝我就出动嘻嘻嘻！今天是个开心开心<br>
+    开心开心开心的日子嘻嘻嘻</p>
+    <img src="Sources/IMG_6247.JPG", width="806.4", height="604.8">
     <h2>2020.11.1</h2>
     <p>爱你小宝贝。昨天恭喜你呀，获得咯第一，去年以0.01分（？）遗憾输给了法学院，今年好像超过第二名好多好多分呢！小宝贝棒棒哒！昨天，也是LOL全球总决赛的日子，我们中国赛区LPL的SN遗憾1:3败给了韩国赛区LCK的DWG， sn的5个小伙子真的打得很好，虽然留下了遗憾，但是战过，就值啦！我们的人生也是一样的，并不是每个人都会成功，因为只有成功者才会被人记住，但是失败者呢？假设有一天，我们也成为了失败者，也要能做到，败不馁。成功也能做到，胜不骄。方可成就强者心态。芜湖！共勉之小可爱</p>
     <img src="Sources/金秋艺术节.JPG">
@@ -19,7 +25,7 @@
     <h2>2020.10.30</h2>
     <p>爱你小宝贝。昨天你想买鞋鞋，原来我答应帮你买马丁靴滴，但是到了月末再加上我买了去看你的车票，就的确没有什么钱啦😊看你没能买到</p>
     <p>有一点不开心的样子，希望你能理解猪猪哦💝</p>
-    <img loading="love" src="/Sources/love.jpeg" width="1164" height="682" />
+    <img loading="love" src="Sources/love.jpeg" width="1164" height="682" />
 
     <a href="/issue.html">Issues</a>
 </body>
