--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <p>简介：每天更新点小东东，顺便每天学点html来玩玩，最重要的还是tensorflow啦嘻嘻嘻</p>
     <p>不知道小小宝贝多久会来看看呢？哈哈哈哈</p>
     <h1>更新日志</h1>
+    <h2>2020.11.3</h2>
+    <p>爱你小宝贝！要好好学习哦</p>
+    <img src="Sources/IMG_6260.JPG", width="1024", height="768">
     <h2>2020.11.2</h2>
     <span style="text-decoration:line-through;">爱你小宝贝。今天猪猪要考概率论咯！所以要好好复习，等我考试结束再来更新啦！你要乖乖滴，懂了没有😯</span>
     <p>爱你小宝贝！小宝小宝，我已经到宿舍啦！今天给了我一个大惊喜哦！嘻嘻嘻开心开心。考完试除了开心以外，还想马上拿起手机去看看我的小妞妞在干什么<br>
