--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <img src="Sources/IMG_6247.JPG", width="806.4", height="604.8">
     <h2>2020.11.1</h2>
     <p>爱你小宝贝。昨天恭喜你呀，获得咯第一，去年以0.01分（？）遗憾输给了法学院，今年好像超过第二名好多好多分呢！小宝贝棒棒哒！昨天，也是LOL全球总决赛的日子，我们中国赛区LPL的SN遗憾1:3败给了韩国赛区LCK的DWG， sn的5个小伙子真的打得很好，虽然留下了遗憾，但是战过，就值啦！我们的人生也是一样的，并不是每个人都会成功，因为只有成功者才会被人记住，但是失败者呢？假设有一天，我们也成为了失败者，也要能做到，败不馁。成功也能做到，胜不骄。方可成就强者心态。芜湖！共勉之小可爱</p>
-    <img src="Sources/金秋艺术节.JPG">
+    <img src="Sources/金秋艺术节.JPG", width="1024", height="768">
     <h2>2020.10.31</h2>
     <p>爱你小宝贝。今天晚上要去跳舞啦💃啦！辛苦了那么久终于可以展示咯，恭喜你呀！我感觉你成长了好多呢，大一的时候，你碰到那种作业和跳舞之间的冲突，你会感觉到烦躁，偶尔会变得比较低沉，但是现在给我感觉你越来越坚强啦！每天都是朝气蓬勃，还要被猪猪气哈哈哈哈哈，但是你还是快快乐乐滴！加油小宝贝，我们一起越变越好哦</p>
     <h2>2020.10.30</h2>
