--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h2>2020.11.3</h2>
     <p>爱你小宝贝！要好好学习哦</p>
     <img src="Sources/IMG_6260.JPG", width="1024", height="768">
+    <h6>哎，想让小宝贝第一时间看到这个，提醒她啦！但是什么也没回应，说是去收拾东西，有点点小伤心, 11:36</h6>
     <h2>2020.11.2</h2>
     <span style="text-decoration:line-through;">爱你小宝贝。今天猪猪要考概率论咯！所以要好好复习，等我考试结束再来更新啦！你要乖乖滴，懂了没有😯</span>
     <p>爱你小宝贝！小宝小宝，我已经到宿舍啦！今天给了我一个大惊喜哦！嘻嘻嘻开心开心。考完试除了开心以外，还想马上拿起手机去看看我的小妞妞在干什么<br>
