--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <p>不知道小小宝贝多久会来看看呢？哈哈哈哈</p>
     <h1>更新日志</h1>
     <h2>2020.11.3</h2>
+    <img src="Sources/456.png", width="1024", height="768">
     <p>爱你小宝贝！要好好学习哦</p>
     <img src="Sources/IMG_6260.JPG", width="1024", height="768">
     <h6>哎，想让小宝贝第一时间看到这个，提醒她啦！但是什么也没回应，说是去收拾东西，有点点小伤心, 11:36</h6>
