--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <p>简介：每天更新点小东东，顺便每天学点html来玩玩，最重要的还是tensorflow啦嘻嘻嘻</p>
     <p>不知道小小宝贝多久会来看看呢？哈哈哈哈</p>
     <h1>更新日志</h1>
+    <h2>2020.11.04</h2>
+    <p>爱你小宝贝。终终终终终终终终终终于抢到欢乐谷的票啦！芜湖！第一天我抢到了你没抢到，第二天我帮你抢但是没抢到，第三天我睡觉忘记啦又没抢到，第四天终于被我抢到啦！<br>
+      芜湖！其实我还是第一次参与抢票的环节哈哈哈，原来在10月31在上海举行的LOL全球总决赛的门票我也去“抢”啦，其实不是抢，他是登记然后抽签，公布的时候我发现我是候补的，<br>
+    然后过了一下说，不好意思，”你没有获得观赛资格“哈哈哈哈，运气不是很好。不过，该抢到的都抢到啦！还是不错哒，等着去和小宝贝在欢乐谷happy芜湖</p>
+    <img src="Sources/huanlegu.png", width="1024", height="768">
     <h2>2020.11.3</h2>
     <img src="Sources/456.png", width="1024", height="768">
     <p>爱你小宝贝！要好好学习哦</p>
