--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
     <p>不知道小小宝贝多久会来看看呢？哈哈哈哈</p>
     <h1>更新日志</h1>
     <h2>2020.11.09</h2>
-    <p>爱你小宝贝！！我回来啦！等我更新嘻嘻嘻</p>
+    <span style="text-decoration:line-through;">爱你小宝贝！！我回来啦！等我更新嘻嘻嘻</span>
+    <p>（写这个文字的时候小宝贝，又不理我了）今天说说绿皮火车吧。小宝在很小的时候，就开始坐绿皮火车啦！相信你有很多的儿时记忆也和绿皮火车有关。我在很小很小的时候<br>
+      我就记得我也做过绿皮火车去我外婆家，我还记得在绿皮火车上买了一个可以扭来扭去的玩具（蛇）。那个时候还很好玩的感觉。一直到了高考结束，我才重新买上了去重庆的火车票<br>
+      然后给小宝贝制造遂宁小惊喜哈哈哈哈哈。自此我就真的爱上了绿皮火车。不知道为什么我会这么喜欢绿皮火车。排除比较便宜以外，可能是享受在火车上慢慢溜达过去的慢节奏还有形<br>
+      形色色的人吧。绿皮火车，不仅承载着底层人民的吃饭的希望， 也是每一对异地恋情侣的向往和爱。哈哈哈哈，可能就是因为绿皮火车里面的满满人情味，才让人如此着迷吧。每一次准备<br>
+      坐绿皮火车之前，我都会很兴奋，除了坐火车的开心，还有可以去见小宝贝的激动。尤其是这种一点一滴“矿机”过去的，就像一点一点努力，我就离你越来越近。这种感觉真的令人很舒服<br>
+      和放心，他能见证我为小宝贝作出的每一次努力，火车就是我们的见证者嘻嘻嘻。我知道我在努力，就可以和我的小宝贝在一起，我就会每天都充满积极，开开心心。这可能就是异地恋的<br>
+      魅力吧。虽然没有，近在咫尺的依靠，但是有永远为你前行的决心。每一次相遇都是不容易的，也是因为这个不容易，让我们更加去珍惜。这种难得，就像在这个快节奏的社会，能够在绿皮<br>
+    火车上享受慢节奏的舒畅，是一样的！小宝贝，事情的结果取决于你的看法和心态，我爱你，无所谓你在哪里，因为你在哪里，我就会去哪里。有你，有爱，就有🐷耶耶耶（矫情了一下哈哈哈）</p>
+    <img src="Sources/train.png", width="1024", height="768">
     <h2>2020.11.04</h2>
     <p>爱你小宝贝。终终终终终终终终终终于抢到欢乐谷的票啦！芜湖！第一天我抢到了你没抢到，第二天我帮你抢但是没抢到，第三天我睡觉忘记啦又没抢到，第四天终于被我抢到啦！<br>
       芜湖！其实我还是第一次参与抢票的环节哈哈哈，原来在10月31在上海举行的LOL全球总决赛的门票我也去“抢”啦，其实不是抢，他是登记然后抽签，公布的时候我发现我是候补的，<br>
