--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>更新日志</h1>
     <h2>2020.11.09</h2>
     <span style="text-decoration:line-through;">爱你小宝贝！！我回来啦！等我更新嘻嘻嘻</span>
-    <p>（写这个文字的时候小宝贝，又不理我了）今天说说绿皮火车吧。小宝在很小的时候，就开始坐绿皮火车啦！相信你有很多的儿时记忆也和绿皮火车有关。我在很小很小的时候<br>
+    <p>今天说说绿皮火车吧。小宝在很小的时候，就开始坐绿皮火车啦！相信你有很多的儿时记忆也和绿皮火车有关。我在很小很小的时候<br>
       我就记得我也做过绿皮火车去我外婆家，我还记得在绿皮火车上买了一个可以扭来扭去的玩具（蛇）。那个时候还很好玩的感觉。一直到了高考结束，我才重新买上了去重庆的火车票<br>
       然后给小宝贝制造遂宁小惊喜哈哈哈哈哈。自此我就真的爱上了绿皮火车。不知道为什么我会这么喜欢绿皮火车。排除比较便宜以外，可能是享受在火车上慢慢溜达过去的慢节奏还有形<br>
       形色色的人吧。绿皮火车，不仅承载着底层人民的吃饭的希望， 也是每一对异地恋情侣的向往和爱。哈哈哈哈，可能就是因为绿皮火车里面的满满人情味，才让人如此着迷吧。每一次准备<br>
