--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <p>简介：每天更新点小东东，顺便每天学点html来玩玩，最重要的还是tensorflow啦嘻嘻嘻</p>
     <p>不知道小小宝贝多久会来看看呢？哈哈哈哈</p>
     <h1>更新日志</h1>
+    <h2>2020.11.10</h2>
+    <p>学业繁重，稍后更新，芜湖</p>
     <h2>2020.11.09</h2>
     <span style="text-decoration:line-through;">爱你小宝贝！！我回来啦！等我更新嘻嘻嘻</span>
     <p>今天说说绿皮火车吧。小宝在很小的时候，就开始坐绿皮火车啦！相信你有很多的儿时记忆也和绿皮火车有关。我在很小很小的时候<br>
