--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p>不知道小小宝贝多久会来看看呢？哈哈哈哈</p>
     <h1>更新日志</h1>
     <h2>2020.11.10</h2>
-    <span style="text-decoration:line-through;">学业繁重，稍后更新，芜湖<span>
+    <span style="text-decoration:line-through;">学业繁重，稍后更新，芜湖</span>
     <p>爱你小宝贝！记录一个有趣的小事情。今天晚上，小宝让我帮她在电脑上登录QQ去发作业给老师。然后，小宝是不想告诉别人她的密码的，所以表达了她的担心，然后我就给她说“那你先改密码，然后登录完了以后，你再改回去呀”。本来是随口一说开玩笑的。没想到小宝真的去改啦。哈哈哈哈哈。小学和初中的时候，关于恋爱，我的认知最多的就是，“男女朋友互相知道各自的QQ密码哦”哈哈哈哈，所以今天第一次碰到这种触及情侣之间关于密码的，然后小宝贝的确让我吃了一惊。哈哈哈哈哈，挺有趣的其实。在我看到小宝贝去改了密码以后，我就有点点不开心啦。不过，最后小宝贝还是太可爱啦！！！！！还要给我唱歌安慰我嘻嘻嘻，真是小天使呢！心都化啦！爱你小宝。世界很奇妙，有幸抓到了一个可爱的小宝贝一起共同探索，嘻嘻嘻！爱你</p>
     <h2>2020.11.09</h2>
     <span style="text-decoration:line-through;">爱你小宝贝！！我回来啦！等我更新嘻嘻嘻</span>
