--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
 <meta charset="utf-8">
@@ -8,7 +8,11 @@
     <h1>我和小宝贝的网站</h1>
     <p>简介：每天更新点小东东，顺便每天学点html来玩玩，最重要的还是tensorflow啦嘻嘻嘻</p>
     <p>不知道小小宝贝多久会来看看呢？哈哈哈哈</p>
+    <p>（2020.11.12）打算新增一些板块，小宝说看网站有那种了解我的生活的感觉，预计新增一个随记小版块</p>
+    <a href="./notes.html">点我进随记（tesing）</a>
     <h1>更新日志</h1>
+    <h2>2020.11.12</h2>
+    <p>爱你小宝贝，等我更新哒，可以先看看随记板块（tesing）如果你喜欢的话，我就正式弄嘻嘻嘻</p>
     <h2>2020.11.11</h2>
     <p>爱你小宝贝！今天终于有时间来写这个东西啦！（好久没有画画咯，主要是时间比较忙啦！善于发现美的眼睛👀困困哒哈哈哈哈）。我想记录一下昨天晚上的事情。（经过是，小宝贝看到武大外联推送的文章有一个可以免费送鲜花的活动，但是我没有发现，然后猪猪舍友收到了两个人送的鲜花，猪猪感觉不开心咯，然后我就开始激动啦，巴拉巴拉之类的）。其实在睡觉之前，我就知道我今天肯定会记录这个事情，因为我觉得这对我来说的确是一个很重要的，思想拓展吧。我发现，其实人还是偏执和自私的。因为，在正常的情况下，我都会没有任何考虑地就会去想到小宝贝，发现有什么给小宝惊喜呀，开心之类的。但是，一旦碰到了，我也有点情绪（不开心，累，委屈之类的）的时候，人就很容易产生一种“亏”的感觉。从昨晚我的“激动表现”可以看得出来，只有我不断地说什么，我对你多好多好呀之类的。这是第一个我反省的东西。人的确很难在自己被情绪所困扰的时候，还能理性地去对待其他人，包括自己爱的人。（咩宝，不好意思哟，猪猪爱你）。然后第二个事情，可能是因为我的死板或者说一根筋，我觉得我就是想做一个好儿子，好舍友，好男朋友，所以我会要求自己尽可能多地去为别人着想，或者说，我想成为一个“完美”的人，所谓的“拥有强者心态的人”（这是我自己的定义，就是我拥有与强者交流切磋的能力，但是我不会给弱者带来压力的那种）。简单滴说就是，我希望做得最好。对待小宝贝也是一样咯，我想成为一个大家都羡慕哒男朋友哈哈哈哈哈（之前我还给自己定了一个目标呢😂说出来不拍你笑话，我评价自己是不是个好男朋友，就看你舍友怎么评价我的哈哈哈哈（更简单地说是。你舍友羡慕你有这样一个男朋友））哈哈哈哈哈哈，（害羞，我好像挺傻的）哈哈哈哈。哎呀！就是像成为你的唯一嘛（害羞😳）。当然啦，我也想成为那个你欣赏的人咯，虽然还不是嘞，但是还要继续加油芜湖。（跑题啦）哈哈哈哈，其实就是，因为我的这方面的“完美主义”，想呈现一个“完美”男友，所以你发现没有每一次你生气，我都会很激动，因为我感觉自己还是“做得挺好哒”（害羞，小宝贝别打我），然后我发现你因为我不开心啦之类的，我就觉得，啊，我又没有做到，巴拉巴拉的，然后就开始激动啦，巴拉巴拉一大堆。这就是我昨天晚上以后，我想要说的或者说记录的，我虽然写得“形散神也散”，但是，最主要的是，我对我自己的那种认知，有一个新的概念存在里面了，以后我再碰到这类事情的时候，我就知道“有迹可循”咯！小宝，好爱你的呢！昨天最后的时候，你委屈地说，“我也想要嘛，那怎么办，我也不开心，但是又不能骂你“， 我就感觉既开心，又自责，又让小宝贝不开心咯！最后，引用一下扎西朗朗的话，”语言和文字真的是不可执取的东西，当一句话说出来的或者写下来，他就不是你的了，你必须允许别人任意解读，甚至误读。所以我最想说的话，其实在我开口的那一刹那就已经说完“。每一天，每一次更新，我都将我最想说的话，脱口而出。</p>
     <h2>2020.11.10</h2>
