--- a/notes.html
+++ b/notes.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <h2>Introduction</h2>
-<p>这是新开设的随记模块（tesing）， 主要是记录我平时的有趣的事情，或者思想？哈哈哈哈，姑且看看</p>
+<p>这是新开设的随记模块（tesing）， 主要是记录我平时的有趣的事情，或者思想？哈哈哈哈，姑且看看（好像和“我和小宝的网站”内容重合了是嘛，小宝感觉呢，可能这个更偏向于碎碎念）</p>
 <h2>2020.11.12</h2>
-<p>wait for updating</p>
+<p>小宝，今天中午我不是和那个同学吃饭的时候聊天嘛，他是和老师做Gan的，我们就交换了思想和体验，比如何老师做项目的好坏还有我自己研究的好坏之类的，就聊的挺开心的，终于碰到那种可以和我聊技术层面的东西的啦！猪猪还是很开心哒，但是好像没有及时回复小宝贝，小宝不开心了呢嘻嘻嘻。对不起啦小宝贝。猪猪下次会多注意哒！啊啊啊啊啊啊啊啊啊，开心，我不是现在都在机房里学习了嘛，因为我想要用机房里的电脑作为我电脑的拓展屏，这样子我写的代码来，或者做什么事情就很方便啦！然后，我第一天忘记带了转接器（要用来连接电脑显示器的屏幕的线），第二天带来了，就是刚刚，然后发现，我的转接器的口不支持（一共流行的口有4种，我的转接器，就是其中的两种支持），不巧，我的位置那里的线刚好是我不支持的，然后我就放弃咯，后来我偷偷看了旁边的一台电脑，发现，他在接口上用了转接器，我拆下来一看！！刚好是我支持的！！！所以我现在，可以用啦！！！芜湖，开心开心。但是更开心的还是小宝贝的🧦！每次收到礼物都开心得不行！嘻嘻嘻，爱你小宝贝</p>
 </body>
 </html>
