--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <p>（2020.11.12）打算新增一些板块，小宝说看网站有那种了解我的生活的感觉，预计新增一个随记小版块</p>
     <a href="./notes.html">点我进随记（tesing）</a>
     <h1>更新日志</h1>
+    <h2>2020.11.13</h2>
+    <p>等我更新哟，待我解决MFE小（大）问题哈哈哈哈哈</p>
     <h2>2020.11.12</h2>
     <p>爱你小宝贝，等我更新哒，可以先看看随记板块（tesing）如果你喜欢的话，我就正式弄嘻嘻嘻</p>
     <p>今天收到小宝贝的袜子咯，嘻嘻嘻开心开心开心开心。这种日常用到的小东西，又贴心又开心爱小宝贝！！！。袜子还是很不错哒又好看又保暖，还去小红书看袜子哦小宝贝，很用心呢嘻嘻嘻。谢谢小宝贝啦！因为昨天小宝没有收到花花，本猪猪，今日特地，画了一个小花花送给小宝！别人有的我的小宝贝也要有！！嘻嘻嘻。另外，现在在秋冬交替季节猪猪妞要注意保暖哦，不能因为猪猪的马丁靴好看就不穿光腿神器也要去穿的呢，猪猪发现了要没收小宝的鞋鞋哦！然后下次去武汉就只能光脚喝奶茶啦！！</p>
