--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>更新日志</h1>
     <h2>2020.11.13</h2>
     <p>等我更新哟，待我解决MFE小（大）问题哈哈哈哈哈</p>
-    <p>哎，世界真奇妙，每个人都永远无法感受或者猜到对方想的是什么，就算是最爱最爱的人。我想让她在写题之前拍题目给我，然后我既可以练习c++，又可以准备好万一她不会我可以马上指导她。她想到的不是这个，而是，“为什么这么烦😡，我想写完这个，你在这里逼逼叨叨什么”。同样的，我也只会想到，“为什么死都不愿意发一下题目的图片给我，我又不想唠唠叨叨的，只想要题目”。每个人还是不同的个体的，但是每次因为这种想法不一致造成的误会和难过，都是两个人的，我也不懂，怎么办哎。❤️</p>
+    <p>❤️乖乖等我更新！不会太久爱你猪猪</p>
     <h2>2020.11.12</h2>
     <p>爱你小宝贝，等我更新哒，可以先看看随记板块（tesing）如果你喜欢的话，我就正式弄嘻嘻嘻</p>
     <p>今天收到小宝贝的袜子咯，嘻嘻嘻开心开心开心开心。这种日常用到的小东西，又贴心又开心爱小宝贝！！！。袜子还是很不错哒又好看又保暖，还去小红书看袜子哦小宝贝，很用心呢嘻嘻嘻。谢谢小宝贝啦！因为昨天小宝没有收到花花，本猪猪，今日特地，画了一个小花花送给小宝！别人有的我的小宝贝也要有！！嘻嘻嘻。另外，现在在秋冬交替季节猪猪妞要注意保暖哦，不能因为猪猪的马丁靴好看就不穿光腿神器也要去穿的呢，猪猪发现了要没收小宝的鞋鞋哦！然后下次去武汉就只能光脚喝奶茶啦！！</p>
