--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <h2>2020.11.13</h2>
     <p>等我更新哟，待我解决MFE小（大）问题哈哈哈哈哈</p>
     <p>❤️乖乖等我更新！不会太久爱你猪猪</p>
+    <p>阿宝阿宝！学习累了吧！快点来网站看看哦！猪猪画了一下我们的校园，这是早上的时候，来教室的路上看到的，阳光打下来的感觉是真的很舒服，又好看，又舒服，秋天加上金色的树叶，还真是好好看的呢！明天猪猪要体检咯，8:30到9点30，我可能会去早一点，早去早结束，我就可以去学习啦！嘻嘻嘻，小宝贝，每一天都要加油哟！爱你亲爱的！</p>
+    <img src="Sources/compus.png", width="1024", height="768">
     <h2>2020.11.12</h2>
     <p>爱你小宝贝，等我更新哒，可以先看看随记板块（tesing）如果你喜欢的话，我就正式弄嘻嘻嘻</p>
     <p>今天收到小宝贝的袜子咯，嘻嘻嘻开心开心开心开心。这种日常用到的小东西，又贴心又开心爱小宝贝！！！。袜子还是很不错哒又好看又保暖，还去小红书看袜子哦小宝贝，很用心呢嘻嘻嘻。谢谢小宝贝啦！因为昨天小宝没有收到花花，本猪猪，今日特地，画了一个小花花送给小宝！别人有的我的小宝贝也要有！！嘻嘻嘻。另外，现在在秋冬交替季节猪猪妞要注意保暖哦，不能因为猪猪的马丁靴好看就不穿光腿神器也要去穿的呢，猪猪发现了要没收小宝的鞋鞋哦！然后下次去武汉就只能光脚喝奶茶啦！！</p>
