--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <p>（2020.11.12）打算新增一些板块，小宝说看网站有那种了解我的生活的感觉，预计新增一个随记小版块</p>
     <a href="./notes.html">点我进随记（tesing）</a>
     <h1>更新日志</h1>
+    <h2>2020.11.14</h2>
+    <p>阿宝阿宝！今天终于收到了你寄来的信啦！！！开心开心，看完你的信以后嘞，超级开心哒！因为之前你提到过那个，你说异地恋之类的你会觉得我们之间有隔阂，很久不见，你会觉得不熟悉之类的，我就很担心。因为我并没有这种感觉，所以我就一直想办法去不让你产生这种想法，比如我一直以来都是秒回你啦，也许这样子你会感觉到安全感儿嘻嘻嘻。然后现在帮小宝贝剪了视频，你说感觉到我们两个人用心去完成某件作品就觉得很开心。我也是！！当然这期间我们也经历了例如我可能因为你提出的好多修改意见而感觉到不开心烦躁之类的啦！嘻嘻嘻。不过也感谢猪猪，我们都在这一段时光里收获了很多东西。希望我们未来一起加油哟！</p>
     <h2>2020.11.13</h2>
     <p>等我更新哟，待我解决MFE小（大）问题哈哈哈哈哈</p>
     <p>❤️乖乖等我更新！不会太久爱你猪猪</p>
