--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <p>（2020.11.12）打算新增一些板块，小宝说看网站有那种了解我的生活的感觉，预计新增一个随记小版块</p>
     <a href="./notes.html">点我进随记（tesing）</a>
     <h1>更新日志</h1>
+    <h2>2020.11.17<h2>
+    <h2>小宝，我在这里和你慢慢说吧。没准你可能想到的时候，会来这里看看。我也不敢去找你了，我怕出现一个“消息被拒收，对方不是你的好友”。现在的脑袋一片空白。</h2>
     <h2>2020.11.16</h2>
     <p>爱你小宝贝！我在实验室里学c++哦，最近打算在实验室里混一个我自己熟悉的位置，然后就当作我自己的专属位置啦！因为战队里有那个c++的练习题，但是我还不怎么会c++所以猪猪要先加油去弄一下这个哦！小宝要是学习累了，来看网站。就可以看到一个努力学习的小猪猪给小宝留下的小东东。哈哈哈哈，明天小宝要去领奖啦！她好像打算穿得挺少的，猪猪有点担心他着凉了，所以在这里提醒她要做好保暖准备哦！不能为了好看就着凉啦。爱你的小猪猪。</p>
     <h2>2020.11.15</h2>
