--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
     <a href="./notes.html">点我进随记（tesing）</a>
     <h1>更新日志</h1>
     <h2>2020.11.17<h2>
-    <h2>小宝，我在这里和你慢慢说吧。没准你可能想到的时候，会来这里看看。我也不敢去找你了，我怕出现一个“消息被拒收，对方不是你的好友”。现在的脑袋一片空白。</h2>
+    <h2>小宝，我在这里和你慢慢说吧。没准你可能想到的时候，会来这里看看。我也不敢去找你了，我怕出现一个“消息被拒收，对方不是你的好友”。现在的脑袋一片空白。</h2><br><br>
+    <h2>爱你小宝贝，我们不说那个事吧。其实，这种事情，无论谁碰上，都是很难处理的。要不就是认为还可以接受情有可原，要不就是无法原谅就此别过。回顾此前看过的那些书籍，里面写下了许许多多的爱情故事，或者与爱情有关的东西。也算是见识过世面了吧。所以对这些东西，还是能够了解到的。同样的，也正是因为了解了这些，所以真正碰到的时候，自己就会有很多种可能性去想象了，也知道怎样做可能会好一些。我就在这里写下我的话吧，每天都有一些，因为我不知道你的想法，也没有办法和你交互。我还是希望你什么时候愿意来这个网站看的话，就能看到这些东西。我知道如果你想通了或者说还愿意和我继续下去，自然会找我。如果不是，那我也没必要去打扰你的生活，你最讨厌啰啰嗦嗦的人啦，所以我应该不会主动找你了，不敢哈哈哈。我的网站（服务器）和域名website.thomaszz4.xyz一年后过期，如果你没有主动找我的话。我还是会每天更新的，更新一年。这样也不会打扰你的生活，同时这个网站本来也就是为我们两个人建设的，如果我们两个人不再是两个人，那它也就没有存在的意义了。也许，我还会陷入到你没有找我的疯狂焦虑当中吧，但是以前我是知道你生气了，巴拉巴拉的。但是现在这种，哎，不好说。刚才打语音的时候，听到了你和你舍友的说话声音，感受到了和当初你不理我享受单身生活去蜡像馆玩的时候一样。正是看到了你发的那条说说，直接击垮了我，我看不出来里面有任何被影响到的东西，也正是那个时候，我处理了所有东西。你爱一个人就会很爱，恨或者（不爱）一个人也是很干脆直接，完全没有一点感情在里面，也许这一次又回到了那个时候那个状态吧。<br><br>
+
+我因为那时候分手所以将关于你的东西都丢了，这个在我的价值观里是一个合理的行为。但是在你那里，我就没有办法去揣摩了。所以，如果你因为这个理由和我分手，我是不会有什么想法的。因为，我没有什么选择不是吗。你之前和我说了好多次关于“给你一个光明的未来”的玩笑。我有的时候看到了不开心，有的时候假装没有什么事情，哈哈哈。但是你可能不知道，我每次看到你这么说，我就很难过。因为，我以为我一直都是你的光明未来。哈哈哈哈哈。不过，现在我依然这么认为，但是你可能不会这么认为了，你也可能开始考虑这个问题了。怎么说呢，如果你想去寻找光明的未来，我支持你吧（艰难地写下这句话）。以前，看到那些爱情故事，说，一个人很爱很爱另一个人，他甚至可以做到帮她去追她喜欢的人。每次看到这个，总会想到怎么会这么傻呢？让自己喜欢的人去喜欢别人吗？哈哈哈哈。不过，实际上，这也是一种爱，无奈的爱。如果她喜欢我，我怎么会还有这种想法呢。就如同现在，如果你不喜欢我了，想要在这个年纪去喜欢其他的追寻其他的爱情，那我已经失去了这个机会，我除了祝福，难道还能死缠烂打吗。哈哈哈，我究竟在说什么。一步一步把自己推下悬崖。哈哈哈哈不愧是我，傻傻的我。<br><br>
+
+终于还是用到了，上次分手期间看的书中的话“我只是疑惑--如果一份契约自签订之日起，便可以随意违弃撕毁，那还有什么签约的必要呢？”这里说的是，女主因为丈夫出轨离婚后发出的感叹。其实，我们在此之前，也说过了很多很多在一起，不爱别人之类的话。不知道，在这种情况下，你是否还会遵循之前做的约定。前天，我写下了诗，问你，那个男孩想做你的依靠。你回答说，愿意。现在是否还是愿意遵循这个定下的诺言，如果不愿意，那么当初为什么会答应的呢？其实，在当初看到这句话的时候，我做了很多笔记，最重要的一条是，契约不是制定来就不能修改的，任何诺言也不是说必须完成的。孔子说，言必信，行必果。孟子又补充说言不必信，行不必果，惟义所在。是在说，当一定条件下，就可以打破诺言和约定。诺言和约定不是一种束缚，捆绑着你。而是一种，思想和念头。比如，曾经约好一直在一起，然后却因为某件事情，破坏了感情或者因为某种行为让你不再爱了。说了这么多，其实也只是在，说。这件事情是否让你没有办法再继续下去，不管猪猪之前做的那些改变或者照顾你，这件事情就是绝对的底线了，毕竟这个是在那个时候做的行为。我也不知道再说些什么。想到什么说什么吧，爱你小宝贝！</h2>
     <h2>2020.11.16</h2>
     <p>爱你小宝贝！我在实验室里学c++哦，最近打算在实验室里混一个我自己熟悉的位置，然后就当作我自己的专属位置啦！因为战队里有那个c++的练习题，但是我还不怎么会c++所以猪猪要先加油去弄一下这个哦！小宝要是学习累了，来看网站。就可以看到一个努力学习的小猪猪给小宝留下的小东东。哈哈哈哈，明天小宝要去领奖啦！她好像打算穿得挺少的，猪猪有点担心他着凉了，所以在这里提醒她要做好保暖准备哦！不能为了好看就着凉啦。爱你的小猪猪。</p>
     <h2>2020.11.15</h2>
