--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <p>（2020.11.12）打算新增一些板块，小宝说看网站有那种了解我的生活的感觉，预计新增一个随记小版块</p>
     <a href="./notes.html">点我进随记（tesing）</a>
     <h1>更新日志</h1>
+    <h2>2020.11.18</h2>
+    <h2>“我比你懂怎么养胃”，“我当然知道怎么办”。既然你已经能够解决所有的事情，也不需要别人安慰，陪伴，那么我这个所谓的依靠也失去了存在的意义，也许，这是最后一更吧。</h2>
     <h2>2020.11.17<h2>
     <h1>小宝小宝，猪猪爱你！你喜欢的是现在的猪猪对吧！但是乱丢东西的是那个笨猪猪哦，不是我这个乖猪猪。嘻嘻嘻。猪猪会好好补偿你呀好不好嘛好不好咯</h1>
     <h2>2020.11.16</h2>
