--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <a href="./notes.html">点我进随记（tesing）</a>
     <h1>更新日志</h1>
     <h2>2020.11.18</h2>
-    <h2>“我比你懂怎么养胃”，“我当然知道怎么办”。既然你已经能够解决所有的事情，也不需要别人安慰，陪伴，那么我这个所谓的依靠也失去了存在的意义，也许，这是最后一更吧。</h2>
+    <h1>爱你小宝贝，因为我知道你讨厌烦人的东西咯巴拉巴拉的，所有更多的时候，我会将我的当时的想法或者感受放在这个网站上。如果自己能处理好的，那我就会删除咯，不能的我就放到或者筛选然后留在这里。我在这个之前，前面的好多内容都是，修改过好多次的，有一次删除了大概几百个字，当然它也是挂在这个网站上的咯。我也知道小宝想看网站来开心呀！缓解情绪呀！巴拉巴拉的的，所以最后我都会调整好基调咯，因为我每天大概都是晚上开始弄的这个内容，所以很多早上只是做了一个小模版，然后说说当时的情况而已。今早为什么说这个呢，是因为，我也挺迷茫的，我不知道你是什么个情况，直到你说那个你还不找你就GG，我才搞清楚你的状态。那之前那些心理斗争巴拉巴拉的，都被我写下来记在这里，可能你今天明天又不会理我了，我也感觉很无奈。因为这个都是为了能让我将情绪处理好而去记录的，你在高中的时候，我们在公交车站那里，聊天，你告诉我说，可以通过写下一点东西来记录自己的情况呀，也好让我自己能够思考或者解决自己的问题之类的。那现在这个网站就是作为这个功能啦，我会先将自己不开心的东西写上去，然后我处理好情绪咯我就会删除换上新的东西，因为我处理起来是很快滴，其实在给你发照片以后我就处理好咯，我一直以为你觉得我烦巴拉巴拉的，但是后面你不是说你同意了，然后我就知道啦。但是因为那个人工智能的东西，我还在想办法去找视频来上，所以这个耽搁了，正常来说我中午就会删掉。所以，小宝贝，这个地方仍然是我们两个的开心伤心的记录，开心也好伤心也好，都应该值得我们记住滴！爱你小宝贝要常来看哦</h1>
     <h2>2020.11.17<h2>
     <h1>小宝小宝，猪猪爱你！你喜欢的是现在的猪猪对吧！但是乱丢东西的是那个笨猪猪哦，不是我这个乖猪猪。嘻嘻嘻。猪猪会好好补偿你呀好不好嘛好不好咯</h1>
     <h2>2020.11.16</h2>
