--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <p>（2020.11.12）打算新增一些板块，小宝说看网站有那种了解我的生活的感觉，预计新增一个随记小版块</p>
     <a href="./notes.html">点我进随记（tesing）</a>
     <h1>更新日志</h1>
+    <h2>2020.11.18 (part 2)</h2>
+    <h1>爱你小宝贝！谢谢小宝贝能够宽容坏猪猪啦！猪猪爱你。小宝肯定也很委屈难过，但是还是选择了继续爱猪猪。猪猪感受到啦！所以猪猪一定会好好疼小宝贝哒，努力还原小猪猪嘻嘻嘻。《麦琪的故事》里面写到一则小故事，两队小情侣吵架啦，分开睡。但是他们还是自然而然地准备好了第二天的早晨。当他们坐到一起的时候，相视一笑，就没有什么值得生气的了。我感觉这是我所向往的爱情，我们可以在相互生气的时候，还能够自然而然地想到为对方付出，这种是自发进行的表达爱的方式咯。然后就算是生气，但是看到对方找你，你就会马上下意识去回复咯！这也是我一直都在努力想给小宝贝做到的事咯。虽然有的时候，看起来凶凶的，然后小宝就被猪猪凶啦！但是，猪猪还是会反省的哦！好好做一个乖宝贝。不是只说不做，都是在努力啦！小宝爱你咯！猪猪有小宝，真的是太幸运啦！</h1>
     <h2>2020.11.18</h2>
     <h1>爱你小宝贝，因为我知道你讨厌烦人的东西咯巴拉巴拉的，所有更多的时候，我会将我的当时的想法或者感受放在这个网站上。如果自己能处理好的，那我就会删除咯，不能的我就放到或者筛选然后留在这里。我在这个之前，前面的好多内容都是，修改过好多次的，有一次删除了大概几百个字，当然它也是挂在这个网站上的咯。我也知道小宝想看网站来开心呀！缓解情绪呀！巴拉巴拉的的，所以最后我都会调整好基调咯，因为我每天大概都是晚上开始弄的这个内容，所以很多早上只是做了一个小模版，然后说说当时的情况而已。今早为什么说这个呢，是因为，我也挺迷茫的，我不知道你是什么个情况，直到你说那个你还不找你就GG，我才搞清楚你的状态。那之前那些心理斗争巴拉巴拉的，都被我写下来记在这里，可能你今天明天又不会理我了，我也感觉很无奈。因为这个都是为了能让我将情绪处理好而去记录的，你在高中的时候，我们在公交车站那里，聊天，你告诉我说，可以通过写下一点东西来记录自己的情况呀，也好让我自己能够思考或者解决自己的问题之类的。那现在这个网站就是作为这个功能啦，我会先将自己不开心的东西写上去，然后我处理好情绪咯我就会删除换上新的东西，因为我处理起来是很快滴，其实在给你发照片以后我就处理好咯，我一直以为你觉得我烦巴拉巴拉的，但是后面你不是说你同意了，然后我就知道啦。但是因为那个人工智能的东西，我还在想办法去找视频来上，所以这个耽搁了，正常来说我中午就会删掉。所以，小宝贝，这个地方仍然是我们两个的开心伤心的记录，开心也好伤心也好，都应该值得我们记住滴！爱你小宝贝要常来看哦</h1>
     <h2>2020.11.17<h2>
