--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <p>（2020.11.12）打算新增一些板块，小宝说看网站有那种了解我的生活的感觉，预计新增一个随记小版块</p>
     <a href="./notes.html">点我进随记（tesing）</a>
     <h1>更新日志</h1>
+    <h2>2020.11.19</h2>
+    <h1>爱你小宝贝！今天小宝去樱顶拍照了呢！棒棒哒。而且看到小宝贝，为了拍一两张特别棒或者特别满意的照片花费很长时间去准备，尝试，还蹲在那里找角度，我就知道，这样子的妞妞是最吸引人的。每一个在做自己热爱的事情的时候，都是十分投入和享受的。以前，我还会看到你因为在拍的过程中巴拉巴拉因为一些不顺心的事情让你很烦啦，或者因为拍不好很烦啦。但是今天这个，就是小宝贝最好的状态。不抱怨，就算湿了，也一笑而过，这才是每一个追逐自己热爱的事业的人，最理想的状态。恭喜小宝贝呀。也是因为你的这种，也会感染我，是我越来越关注或者倾向于拍照呀，什么时候也会不由自主主动拍点照片，不是为了完成任务巴拉巴拉的，而是从心底里去感受美，感受那些美好的瞬间。这种体验是极好的呀！小宝贝，继续加油哟，猪猪爱你！也愿意陪你一起探索你喜欢的事业去支持鼓励你咯！然后也慢慢地接触并且提高自己在这方面的东西啦！爱你小宝贝！</h1>
     <h2>2020.11.18 (part 2)</h2>
     <h1>爱你小宝贝！谢谢小宝贝能够宽容坏猪猪啦！猪猪爱你。小宝肯定也很委屈难过，但是还是选择了继续爱猪猪。猪猪感受到啦！所以猪猪一定会好好疼小宝贝哒，努力还原小猪猪嘻嘻嘻。《麦琪的故事》里面写到一则小故事，两队小情侣吵架啦，分开睡。但是他们还是自然而然地准备好了第二天的早晨。当他们坐到一起的时候，相视一笑，就没有什么值得生气的了。我感觉这是我所向往的爱情，我们可以在相互生气的时候，还能够自然而然地想到为对方付出，这种是自发进行的表达爱的方式咯。然后就算是生气，但是看到对方找你，你就会马上下意识去回复咯！这也是我一直都在努力想给小宝贝做到的事咯。虽然有的时候，看起来凶凶的，然后小宝就被猪猪凶啦！但是，猪猪还是会反省的哦！好好做一个乖宝贝。不是只说不做，都是在努力啦！小宝爱你咯！猪猪有小宝，真的是太幸运啦！</h1>
     <h2>2020.11.18</h2>
