--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <a href="./notes.html">点我进随记（tesing）</a>
     <h1>更新日志</h1>
     <h2>2020.11.20</h2>
+    <h1>爱你小宝贝！终于小宝贝的处女座？？好像是我记忆里小宝贝第一次正式参与摄影比赛当中哦。是时候检验一个小宝贝的技术啦！嘻嘻嘻，猪猪觉得小宝贝拍得非常棒，配色呀，构图呀等等，小宝棒棒哒！猪猪就帮妞妞记录一下第一个作品集《暖阳有影，清露无声》哈哈哈哈哈！小宝贝，加油哟。猪猪帮你记录你的每一次成长。（尽情期待）期待未来妞妞更好的照片！</h1>
+    <img src="Sources/photo.png", width="1024", height="768">
     <h1>爱你小宝贝！现在妞妞应该在睡觉哦，下午还要去赚钱钱哈哈哈哈，两场一场20一场25呢。小宝贝赚钱别忘记了要学习哦！带上作业去，带够够的，不然等下妞妞写太快了就写完咯。还要记得带零食去，多带，直接带一整个糖瓶子去啦！肉肉在路上咯！新疆过来好久哒，妞妞得耐心等待哦。先好好睡觉，猪猪在弄神经网络。等你起来哟（衣服，穿够！零食，带够！作业，拿够！）The most important thing is bringing 🐷🐷 with you!!!</h1>
     <h2>2020.11.19</h2>
     <h1>爱你小宝贝！今天小宝去樱顶拍照了呢！棒棒哒。而且看到小宝贝，为了拍一两张特别棒或者特别满意的照片花费很长时间去准备，尝试，还蹲在那里找角度，我就知道，这样子的妞妞是最吸引人的。每一个在做自己热爱的事情的时候，都是十分投入和享受的。以前，我还会看到你因为在拍的过程中巴拉巴拉因为一些不顺心的事情让你很烦啦，或者因为拍不好很烦啦。但是今天这个，就是小宝贝最好的状态。不抱怨，就算湿了，也一笑而过，这才是每一个追逐自己热爱的事业的人，最理想的状态。恭喜小宝贝呀。也是因为你的这种，也会感染我，是我越来越关注或者倾向于拍照呀，什么时候也会不由自主主动拍点照片，不是为了完成任务巴拉巴拉的，而是从心底里去感受美，感受那些美好的瞬间。这种体验是极好的呀！小宝贝，继续加油哟，猪猪爱你！也愿意陪你一起探索你喜欢的事业去支持鼓励你咯！然后也慢慢地接触并且提高自己在这方面的东西啦！爱你小宝贝！</h1>
