--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <a href="./notes.html">点我进随记（tesing）</a>
     <h1>更新日志</h1>
     <h2>2020.11.21</h2>
-    <h1>爱你小宝贝！猪猪回来啦！拍照回来，被小宝夸了呢嘻嘻嘻。猪猪今天比较忙咯，就没有啥更新（主要是10点多才起床呜呜呜）猪猪保证明天就早起哈哈哈哈哈哈，然后就可以好好更新咯！爱你小宝贝！！！！</h1>
+    <h1>爱你小宝贝！猪猪回来啦！拍照回来，被小宝夸了呢嘻嘻嘻。猪猪今天比较忙咯，就没有啥更新（主要是10点多才起床呜呜呜）猪猪保证明天就早起哈哈哈哈哈哈，然后就可以好好更新咯！爱你小宝贝！！！！(妞妞还迷上了猪猪的小嘴嘴，真是可爱的小宝贝呢嘻嘻嘻)</h1>
     <h2>2020.11.20</h2>
     <h1>爱你小宝贝！终于小宝贝的处女座？？好像是我记忆里小宝贝第一次正式参与摄影比赛当中哦。是时候检验一个小宝贝的技术啦！嘻嘻嘻，猪猪觉得小宝贝拍得非常棒，配色呀，构图呀等等，小宝棒棒哒！猪猪就帮妞妞记录一下第一个作品集《暖阳有影，清露无声》哈哈哈哈哈！小宝贝，加油哟。猪猪帮你记录你的每一次成长。（尽情期待）期待未来妞妞更好的照片！</h1>
     <img src="Sources/photo.png", width="1024", height="768">
