--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <p>（2020.11.12）打算新增一些板块，小宝说看网站有那种了解我的生活的感觉，预计新增一个随记小版块</p>
     <a href="./notes.html">点我进随记（tesing）</a>
     <h1>更新日志</h1>
+    <h2>2020.11.22</h2>
+    <h1>爱你小宝贝。</h1>
     <h2>2020.11.21</h2>
     <h1>爱你小宝贝！猪猪回来啦！拍照回来，被小宝夸了呢嘻嘻嘻。猪猪今天比较忙咯，就没有啥更新（主要是10点多才起床呜呜呜）猪猪保证明天就早起哈哈哈哈哈哈，然后就可以好好更新咯！爱你小宝贝！！！！(妞妞还迷上了猪猪的小嘴嘴，真是可爱的小宝贝呢嘻嘻嘻)</h1>
     <h2>2020.11.20</h2>
