--- a/notes.html
+++ b/notes.html
@@ -7,6 +7,8 @@
 <body>
 <h2>Introduction</h2>
 <p>这是新开设的随记模块（tesing）， 主要是记录我平时的有趣的事情，或者思想？哈哈哈哈，姑且看看（好像和“我和小宝的网站”内容重合了是嘛，小宝感觉呢，可能这个更偏向于碎碎念）</p>
+<h2>2020.11.22</h2>
+<h1>哎，为什么花了一个小时的出门去公共场合，却不愿意停留下来5秒钟给我一个照片（主动），难道我没有资格去欣赏吗？只有武汉大学的学生才可以目睹你一个小时的辛苦成果吗。刚才我一直在念口语，也很开心。现在，就看到一个，“出门出门”。我也不知道说什么了，心情瞬间低落谷底，没准你会说“忘了，太忙了”。我不知道，看到这个忘记多少次，我能够拥有那么多次忘记的机会吗。我也不知道说什么。等吧，看看你回复的是什么哎哎哎哎哎哎哎哎。我真的真的无法想通，对我来说我做了开心的事情，我第一个就想和你分享，拍照，想问题，巴拉巴拉的。你化妆，哎算了。不想说了。忙着去让大家去欣赏你的魅力吧。</h1>
 <h2>2020.11.17</h2>
 <h1>给最爱的小宝贝！猪猪永远永远陪着你，疼你。</h1>
 <h2>2020.11.15</h2>
