--- a/notes.html
+++ b/notes.html
@@ -8,7 +8,7 @@
 <h2>Introduction</h2>
 <p>这是新开设的随记模块（tesing）， 主要是记录我平时的有趣的事情，或者思想？哈哈哈哈，姑且看看（好像和“我和小宝的网站”内容重合了是嘛，小宝感觉呢，可能这个更偏向于碎碎念）</p>
 <h2>2020.11.22</h2>
-<h1>无</h1>
+<h2>无。其实很简单，就是你忙起来和你生气不理我对我来说是一样的。“你不回我，不主动找我”。所以，我就很难去判断你不回我的原因，我知道你化妆，但是我又是在规定时间内叫你起来的，你也是按时起来的，那我怎么知道你会因为这个迟到呢？我以为你已经安排好了。但是，你从起床到出门就只有两句话“起床”，“出门出门”。这个和你以前生气不理我是一样的，就是间隔很久很少的话。其实，如果你想的话，你一样可以回的。但是你既然没有这个习惯，那我也就不说啦。如果你站在我的角度来想的话，你看到我回复你很少的时候，你就知道“我生气了，不开心了”，因为我只有这一种情况才会这样子回复你。但是你有两种情况，而女生生气起来，谁知道因为什么，有的时候作业写不完都会不开心的。这个是我想说的第一点</h2><h1>在没有被明确告知很忙的情况下，我几乎分辨不出，你不回复我是因为忙，还是生气</h1><h2>在这种情况下，我只能靠自己去感受，但是基本上，百分之九十我都会认定为你不理我。因为我知道我因为你生气不开心了半天，但是结果你完全没有感受到我不开心的时候我非常难受。所以，换位思考的话，我肯定不希望在你生气的时候，我完全感受不到。我不希望你经历这种难受。这就是为什么，我在你不回不理我的时候，并且是在没有明确告知忙或者有急事的时候，选择将百分之九十当作你生气的理由。然后，就会衍生一大堆没有必要的<h1>麻烦</h1>。可能是你说的共情力和我个人的习惯问题导致的这个问题,所以我想和你讨论的就是如何解决这个问题。妞妞爱你</h2>
 <h2>2020.11.17</h2>
 <h1>给最爱的小宝贝！猪猪永远永远陪着你，疼你。</h1>
 <h2>2020.11.15</h2>
