--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <a href="./notes.html">猪猪的随记</a>
     <a href="./photo.html">照片墙</a>
     <h1>更新日志</h1>
+    <h2>2020.11.25</h2>
+    <h1>爱你小宝贝！！最近到了多雨的时候咯，武汉也是一直下雨，苏州也是一直下雨，还可能会下一周哟！所以，猪猪和妞妞都要记得穿对鞋子，穿厚衣服。小妞妞今天有肉肉吃咯！还吃多了去上厕所全没啦！！哈哈哈哈哈小傻蛋笑死我啦！！妞妞我回宿舍就继续更新哟！</h1>
+    <h2>2020.11.24</h2>
     <h2>2020.11.23</h2>
     <h1>爱你小宝贝！猪猪最近好忙滴咯，所以网站更新就被暂缓啦。如果猪猪发现什么新奇有意思的东西，就会来更新哒！猪猪最近全力全力备战口语哦，因为它相对而言好拿分，如果我准备充分的话嘻嘻嘻。对啦！小宝，我之前想到了一个点子，我要新建一个新的板块，专门用于存我们两个人拍的照片“用于艺术的自我欣赏和记录”以便与未来的技术提升。同时也是一个很好的看到我们拍摄经历的过程啦！所以我有了这个规划，应该会在不久以后去实现它，具体的实现方式，还是得思考一下。就是一个预热。爱你小宝贝！！！猪猪加油学习啦！妞妞也要加油哦！</h1>
     <h2>2020.11.22</h2>
