--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     <a href="./photo.html">照片墙</a>
     <h1>更新日志</h1>
     <h2>2020.11.25</h2>
-    <h1>爱你小宝贝！！最近到了多雨的时候咯，武汉也是一直下雨，苏州也是一直下雨，还可能会下一周哟！所以，猪猪和妞妞都要记得穿对鞋子，穿厚衣服。小妞妞今天有肉肉吃咯！还吃多了去上厕所全没啦！！哈哈哈哈哈小傻蛋笑死我啦！！妞妞我回宿舍就继续更新哟！</h1>
+    <h1>爱你小宝贝！！最近到了多雨的时候咯，武汉也是一直下雨，苏州也是一直下雨，还可能会下一周哟！所以，猪猪和妞妞都要记得穿对鞋子，穿厚衣服。小妞妞今天有肉肉吃咯！还吃多了去上厕所全没啦！！哈哈哈哈哈小傻蛋笑死我啦！！妞妞我回宿舍就继续更新哟！妞妞妞妞。我来啦！嘻嘻嘻，你发现没有，最近我们都开始忙碌啦！有的是学习，有的是战队，总之我们就是在忙碌。你知道如何解决忙碌其实也是一个对于情侣之间很大的一个挑战。不知道你有没有思考过这个问题，在忙碌的过程中，会不会想到你的另一半在干啥，要不要撩一下巴拉巴拉的。但是更重要的是，我们会因为结束了忙碌的时候，打开手机，看到的还是离开之前的消息。哈哈哈哈，我觉得以后可能会出现这个情况吧。所以写在这里做一个提醒咯。我们要“是不是互相撩一下”时不时发发照片咯。不然，有的时候，想了又不敢找，不仅仅是因为怕打扰到对方，更重要的也是，可能会因为没有被妞妞找而感到失落。如果妞妞看到了，就多注意一点哦（今天没有感觉到不开心放心啦，就是想到了说出来）。爱你哟小宝贝，好好保暖小脚脚，猪猪爱你！</h1>
     <h2>2020.11.24</h2>
+    <h1>爱你小宝贝！！！嘻嘻嘻</h1>
     <h2>2020.11.23</h2>
     <h1>爱你小宝贝！猪猪最近好忙滴咯，所以网站更新就被暂缓啦。如果猪猪发现什么新奇有意思的东西，就会来更新哒！猪猪最近全力全力备战口语哦，因为它相对而言好拿分，如果我准备充分的话嘻嘻嘻。对啦！小宝，我之前想到了一个点子，我要新建一个新的板块，专门用于存我们两个人拍的照片“用于艺术的自我欣赏和记录”以便与未来的技术提升。同时也是一个很好的看到我们拍摄经历的过程啦！所以我有了这个规划，应该会在不久以后去实现它，具体的实现方式，还是得思考一下。就是一个预热。爱你小宝贝！！！猪猪加油学习啦！妞妞也要加油哦！</h1>
     <h2>2020.11.22</h2>
