--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <a href="./notes.html">猪猪的随记</a>
     <a href="./photo.html">照片墙</a>
     <h1>更新日志</h1>
+    <h2>2020.11.26</h2>
+    <h1>爱你小宝贝呀！！！今天猪猪在实验室搞了我们那个模型的优化，结果十分理想嘻嘻嘻。性能增加了100倍，我严重怀疑有点问题。但是我们还是很开心，我们一个视觉组的人都特别激动，其他的人也围了过来看哈哈哈哈哈享受了一下团队合作以后完成成果的欢乐（虽然都是我搞的哈哈哈哈哈）。但是他们还是很认真的去帮我解决我需要的东西哈哈哈哈。然后还被他们称呼为“大佬”芜湖，然后我说“没有没有”哈哈哈哈哈。小妞妞此时此刻正在流口水痴迷者看着背景小帅哥在跳舞别冷到了哦，我的小宝贝！猪猪爱你。未来继续加油咯</h1>
     <h2>2020.11.25</h2>
     <h1>爱你小宝贝！！最近到了多雨的时候咯，武汉也是一直下雨，苏州也是一直下雨，还可能会下一周哟！所以，猪猪和妞妞都要记得穿对鞋子，穿厚衣服。小妞妞今天有肉肉吃咯！还吃多了去上厕所全没啦！！哈哈哈哈哈小傻蛋笑死我啦！！妞妞我回宿舍就继续更新哟！妞妞妞妞。我来啦！嘻嘻嘻，你发现没有，最近我们都开始忙碌啦！有的是学习，有的是战队，总之我们就是在忙碌。你知道如何解决忙碌其实也是一个对于情侣之间很大的一个挑战。不知道你有没有思考过这个问题，在忙碌的过程中，会不会想到你的另一半在干啥，要不要撩一下巴拉巴拉的。但是更重要的是，我们会因为结束了忙碌的时候，打开手机，看到的还是离开之前的消息。哈哈哈哈，我觉得以后可能会出现这个情况吧。所以写在这里做一个提醒咯。我们要“是不是互相撩一下”时不时发发照片咯。不然，有的时候，想了又不敢找，不仅仅是因为怕打扰到对方，更重要的也是，可能会因为没有被妞妞找而感到失落。如果妞妞看到了，就多注意一点哦（今天没有感觉到不开心放心啦，就是想到了说出来）。爱你哟小宝贝，好好保暖小脚脚，猪猪爱你！</h1>
     <h2>2020.11.24</h2>
