--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <a href="./notes.html">猪猪的随记</a>
     <a href="./photo.html">照片墙</a>
     <h1>更新日志</h1>
+    <h2>2020.11.27</h2>
+    <h1>爱你小宝贝！猪猪来写网站啦！猪猪答应过小宝贝，每一天都会写一点点网站滴。而且猪猪也知道妞妞肯定是会偷偷来看，然后发现没有网站就有点失落咯。然后聪明爱你的傻猪猪，肯定不会让你失落哒！嘻嘻嘻，越来越想妞妞咯，每次视频结束，就想捏妞妞的小脸蛋亲亲妞妞的小嘴嘴。妞妞12月准备来啦！猪猪要去陪妞妞玩咯，还有电影免费的，还没过期呢！真的是运气太好啦。嘻嘻嘻，妞妞，猪猪爱你，平凡的生活里，有你，就不平凡。每天都要开开心心哒（手都僵硬咯，电脑冷儿，哈哈哈）妞妞晚安！！猪猪爱你。</h1>
     <h2>2020.11.26</h2>
     <h1>爱你小宝贝呀！！！今天猪猪在实验室搞了我们那个模型的优化，结果十分理想嘻嘻嘻。性能增加了100倍，我严重怀疑有点问题。但是我们还是很开心，我们一个视觉组的人都特别激动，其他的人也围了过来看哈哈哈哈哈享受了一下团队合作以后完成成果的欢乐（虽然都是我搞的哈哈哈哈哈）。但是他们还是很认真的去帮我解决我需要的东西哈哈哈哈。然后还被他们称呼为“大佬”芜湖，然后我说“没有没有”哈哈哈哈哈。小妞妞此时此刻正在流口水痴迷者看着背景小帅哥在跳舞别冷到了哦，我的小宝贝！猪猪爱你。未来继续加油咯</h1>
     <h2>2020.11.25</h2>
