--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <a href="./notes.html">猪猪的随记</a>
     <a href="./photo.html">照片墙</a>
     <h1>更新日志</h1>
+    <h2>2020.11.28</h2>
+    <h1>爱你小宝贝！！又到了每天更新环节，这个小妞妞哦。好像好多天没有学习了呢（打小屁屁）。最近真的是越来越忙咯，感觉一天就刷刷刷就没咯哈哈哈哈（但是很开心的一点是，什么时候停下来了，发现有人在等你。那种感觉好幸福的呢嘻嘻嘻）。（猪猪不能睡觉赚钱了，得7:30起来，不然感觉早上浪费太多时间在床上啦其实还是享受一下冬天赖床的快乐哈哈哈哈）对啦，妞妞明天你的那个暖脚的就到咯，你每天晚上都说冷冷冷，要是有了这个还说冷，就被猪猪打屁股。噜噜噜。爱你小宝贝！</h1>
     <h2>2020.11.27</h2>
     <h1>爱你小宝贝！猪猪来写网站啦！猪猪答应过小宝贝，每一天都会写一点点网站滴。而且猪猪也知道妞妞肯定是会偷偷来看，然后发现没有网站就有点失落咯。然后聪明爱你的傻猪猪，肯定不会让你失落哒！嘻嘻嘻，越来越想妞妞咯，每次视频结束，就想捏妞妞的小脸蛋亲亲妞妞的小嘴嘴。妞妞12月准备来啦！猪猪要去陪妞妞玩咯，还有电影免费的，还没过期呢！真的是运气太好啦。嘻嘻嘻，妞妞，猪猪爱你，平凡的生活里，有你，就不平凡。每天都要开开心心哒（手都僵硬咯，电脑冷儿，哈哈哈）妞妞晚安！！猪猪爱你。</h1>
     <h2>2020.11.26</h2>
