--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <a href="./notes.html">猪猪的随记</a>
     <a href="./photo.html">照片墙</a>
     <h1>更新日志</h1>
+    <h2>2020.12.1</h2>
+    <h1>爱你小宝贝。不知不觉就到了12月，2020又准备过去啦！在过去的一年里妞妞有什么有完成什么长期目标呀。时间飞快，每天都是被推着走，每天都会接触很多新鲜的自己不了解的东西，技术。每天都在不断学习这些东西当中度过，有的时候是开心，因为解决了困恼了已久的问题，有的时候是低沉，因为研究学习陷入了困境，没有什么突破，但是当你知道你的同龄人正在无时无刻都在进步学习，然后就要更加努力啦！小宝贝。今天，金秋拍摄获得三等奖了哦。棒棒哒，而且还是猪猪也参与的给你小点子。耶耶耶爱你小贝贝。未来继续加油研究拍照啦！妞妞加油！猪猪陪你</h1>
+    <h2>2020.11.30</h2>
+    <h1>爱你小宝贝！</h1>
     <h2>2020.11.29</h2>
     <h1>爱你小宝贝！猪猪发现，发现美的眼睛每个人都有，但是人们总是因为各种各样的原因而“暂时失去”了他。你发现没有，自从猪猪入驻实验室以后，基本上都没有再画画巴拉巴拉的咯。因为，一整天下来，忙忙碌碌，七七八八地就已经精神疲惫啦。自然就没有多余的精力去弄这些咯，（每天猪猪回宿舍的那个“发癫”就是放松自己哈哈哈哈哈）。但是嘞，今天早上过来的时候，发现阳光很好，心情很棒。突然发现了，EB（我之前每天都去自习的那栋楼）旁边居然有这么一块大石头。那一瞬间觉得它挺美的拍下以后仔细一想，挺可怕的，明明我每天都经过这里，为什么我没有发现他，直到今天才发现呢。可能是因为我们每天都是匆匆过客，难以静心去欣赏那些路边的过路的小景色，（一般猪猪早上早起去教室的时候➕阳光明媚，就很舒服就会发现美）但是那些景色一直都在那里，真的是值得惊醒呢。还有一个事情就是，昨天，我在实验室里，然后下午2点去打羽毛球，我问他们你们不去运动吗？他们说，不去并且夸了我一下技术又好又运动。然后我笑笑就走了。现在突然想到，难道这不是很自然的吗？这个严重的问题，忙碌之下我们会被生活所推着走，难以让我们自己去做自己想做的事情。比如，我之前计划每天看30分钟的书，结果因为忙碌一而再再而三地搁置（妞妞，这不是乱立flag我很讨厌你这么说我哦以后不要说啦好不好呀。猪猪每次都很努力去做这些东西，但是忙碌这个东西挺有意思的）。再分享一个事情，之前看一个youtuber The DoDo Man, 是两个美国大公司（苹果和巴拉巴拉的没说）放弃年薪百万选择去做自己想做的事情他们称呼为跳出舒适圈的行为。真的被他们感触到了，我当然不是那种看了《月亮和六便士》就叫嚷着去追逐自己梦想就放弃现实的人，但是值得一提的就是，忙碌真的是人类一大敌人。他悄无声息地将我们磨刻成我们不想的样子，而客服他的方法应该可能是不论如何也要逼迫自己一把吧。关于忙碌，我还想写更多。这是这一阶段最最最最恐怖的一个东西，并且很有可能会伴随一生，如果有一个好的思想和行为标准去看待这个事情，应该会是极好的。妞妞，你对忙碌有什么较深的理解嘛。猪猪爱你。（最后附上，EB旁的被我忽略的小石头，谨此惊醒自己，不要被忙碌消磨了自己）<h1>
     <img src="Sources/rock.png", width="1024", height="768">
