--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <a href="./notes.html">猪猪的随记</a>
     <a href="./photo.html">照片墙</a>
     <h1>更新日志</h1>
+    <h2>2020.12.2</h2>
+    <h1>爱你小宝贝！可惜哦，我们到了期末的时候都没有一个合适的时间一块出去玩儿，但是没关系哒。因为，我们还是可以每天视频来学习咯。只要我是在一个教室里，我就可以随时随地满足小宝贝的需求哒。我到了复习周的时候，我就打算去原来的EB教室好好学习。就不去实验室啦！然后我们就可以随时随地视频咯，因为我都是在教室的最后一排不会影响到别人。嘻嘻嘻。这样小宝贝就开心咯对啦嘛嘻嘻嘻。猪猪爱你哟小宝贝！❤️</h1>
     <h2>2020.12.1</h2>
     <h1>爱你小宝贝。不知不觉就到了12月，2020又准备过去啦！在过去的一年里妞妞有什么有完成什么长期目标呀。时间飞快，每天都是被推着走，每天都会接触很多新鲜的自己不了解的东西，技术。每天都在不断学习这些东西当中度过，有的时候是开心，因为解决了困恼了已久的问题，有的时候是低沉，因为研究学习陷入了困境，没有什么突破，但是当你知道你的同龄人正在无时无刻都在进步学习，然后就要更加努力啦！小宝贝。今天，金秋拍摄获得三等奖了哦。棒棒哒，而且还是猪猪也参与的给你小点子。耶耶耶爱你小贝贝。未来继续加油研究拍照啦！妞妞加油！猪猪陪你</h1>
     <h2>2020.11.30</h2>
