--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <a href="./notes.html">猪猪的随记</a>
     <a href="./photo.html">照片墙</a>
     <h1>更新日志</h1>
+    <h2>2020.12.3</h2>
+    <h1>爱你小宝贝！！积极分子哦！未来国家的栋梁啦！就属张川惠子哈哈哈哈。小宝贝棒棒哒，还成为了积极分子噜噜噜。猪猪要向小宝贝学习啦！什么时候也争取一个积极猪猪哈哈哈哈哈那可太妙啦嘻嘻嘻。猪猪最近好多DDL咯，所以希望小宝贝要多多担待猪猪一点啦！猪猪老爱你了啦！爱你小宝贝，我们继续加油哟</h2>
     <h2>2020.12.2</h2>
     <h1>爱你小宝贝！可惜哦，我们到了期末的时候都没有一个合适的时间一块出去玩儿，但是没关系哒。因为，我们还是可以每天视频来学习咯。只要我是在一个教室里，我就可以随时随地满足小宝贝的需求哒。我到了复习周的时候，我就打算去原来的EB教室好好学习。就不去实验室啦！然后我们就可以随时随地视频咯，因为我都是在教室的最后一排不会影响到别人。嘻嘻嘻。这样小宝贝就开心咯对啦嘛嘻嘻嘻。猪猪爱你哟小宝贝！❤️</h1>
     <h2>2020.12.1</h2>
