--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <a href="./notes.html">猪猪的随记</a>
     <a href="./photo.html">照片墙</a>
     <h1>更新日志</h1>
+    <h2>2020.11.7</h2>
+    <h1>爱你小宝贝！！好讨厌哦，网站被封咯。妞妞没有消遣的小玩意咯。猪猪在备案中啦，应该很快就可以重新访问啦小妞妞要耐心等待哟。妞妞好像是1月11号已知道最晚的一门科目，但是猪猪19号才结束呜呜呜。想去找妞妞玩了。猪猪想你。只能够寒假咯这样子看的话。那就寒假好好陪妞妞去玩咯。时间过得好快的呀。其实异地恋也是有好处哒。你看一转眼过去了很久，我们都在沿着自己的步伐慢慢进步，猪猪这次IOT的coureswork33.7呢最高分35。（满分40啦）。所以妞妞也要加油哦，虽然是异地恋，但是我们少了每天在一起的小细节所带来的烦恼，多了互相进步激励的积极感。猪猪觉得这是很棒哒。异地恋就是那种，两个人为了相交而相互努力。忙起来的时候，有自己的时间去好好研究问题，不忙的时候可以去相互撩一下。太幸福啦！但是，猪猪相信妞妞肯定是希望触手可得的猪猪对吧！猪猪每天都是为了和妞妞在一起还有为未来做努力的哦！妞妞，猪猪爱你！要一直一直在一起哦！猪猪爱你啦！</h1>
+    <h2>2020.12.4 - 2020.12.6</h2>
+    <h1>维护中</h1>
     <h2>2020.12.3</h2>
     <h1>爱你小宝贝！！积极分子哦！未来国家的栋梁啦！就属张川惠子哈哈哈哈。小宝贝棒棒哒，还成为了积极分子噜噜噜。猪猪要向小宝贝学习啦！什么时候也争取一个积极猪猪哈哈哈哈哈那可太妙啦嘻嘻嘻。猪猪最近好多DDL咯，所以希望小宝贝要多多担待猪猪一点啦！猪猪老爱你了啦！爱你小宝贝，我们继续加油哟</h2>
     <h2>2020.12.2</h2>
