--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <a href="./notes.html">猪猪的随记</a>
     <a href="./photo.html">照片墙</a>
     <h1>更新日志</h1>
-    <h2>2020.11.7</h2>
+    <h2>2020.12.8</h2>
+    <h1>爱你小宝贝！！今天妞妞去做了4级的题目咯效果很棒的呀哈哈哈哈。好像下周就考试了哦，妞妞得加油哒。今天猪猪网站备案咯我也不懂多久可以哈哈哈哈哈可能还有好久吧。猪猪今天不知道咋的头晕晕的就从中午12点一只睡到了下午5点！！！！惊了哈哈哈哈哈不得不记录一下。就是那种睡得真的稀里糊涂的感觉😂现在还有有一点头痛的啦。可能是冷到咯。我老妈寄来了秋衣秋裤明天可以去拿，所以应该问题不大。妞妞自己也要注意保暖的呀。像刚才就跑去外面充热水袋。可能是冷索索的哦。然后就不理我咯哈哈哈哈哈可能跑回去去暖🦶🦶咯哈哈哈哈。真是可爱的小宝贝呢。猪猪爱你！今天就这样（水一水）。哈哈哈哈对啦对啦！妞妞今天写日记的时候还发现了猪猪和你一年前的这个时候还在吵架哈哈哈哈哈。其实我们都是在进步的啦，自然是越来越好滴。不过也很有意思的啦。记录我们的点点滴滴，然后妞妞又可以骂我咯，呜呜呜。嘻嘻嘻猪猪还是很乖哒。猪猪爱你！以后也爱你。让你在日记上写不来我的坏话噜噜噜</h1>
+    <h2>2020.12.7</h2>
     <h1>爱你小宝贝！！好讨厌哦，网站被封咯。妞妞没有消遣的小玩意咯。猪猪在备案中啦，应该很快就可以重新访问啦小妞妞要耐心等待哟。妞妞好像是1月11号已知道最晚的一门科目，但是猪猪19号才结束呜呜呜。想去找妞妞玩了。猪猪想你。只能够寒假咯这样子看的话。那就寒假好好陪妞妞去玩咯。时间过得好快的呀。其实异地恋也是有好处哒。你看一转眼过去了很久，我们都在沿着自己的步伐慢慢进步，猪猪这次IOT的coureswork33.7呢最高分35。（满分40啦）。所以妞妞也要加油哦，虽然是异地恋，但是我们少了每天在一起的小细节所带来的烦恼，多了互相进步激励的积极感。猪猪觉得这是很棒哒。异地恋就是那种，两个人为了相交而相互努力。忙起来的时候，有自己的时间去好好研究问题，不忙的时候可以去相互撩一下。太幸福啦！但是，猪猪相信妞妞肯定是希望触手可得的猪猪对吧！猪猪每天都是为了和妞妞在一起还有为未来做努力的哦！妞妞，猪猪爱你！要一直一直在一起哦！猪猪爱你啦！</h1>
     <h2>2020.12.4 - 2020.12.6</h2>
     <h1>维护中</h1>
