--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <a href="./notes.html">猪猪的随记</a>
     <a href="./photo.html">照片墙</a>
     <h1>更新日志</h1>
+    <h2>2020.12.9</h2>
+    <h1>爱你小宝贝！！猪猪明天就要去presentation啦！我们小组准备了很久哦，而且每一个人都上台演讲，大家准备得都很认真。（虽然每周一次的线下课他们一个都不来哈哈哈哈哈哈）但是还是出乎意料地大家都特别地用心积极。所以猪猪还是很开心的啦！希望我们明天能够获得一个好成绩嘻嘻嘻。妞妞，猪猪准备军训啦！还记得去年的时候，妞妞军训，还一直和猪猪说，好累但是还是很坚强滴坚持下来啦！见证了妞妞的成长哈哈哈哈。现在也到猪猪说。“妞妞，猪猪累，要安慰亲亲抱抱嘻嘻嘻”。那妞妞也要记得宝宝陪伴猪猪哦，好好安慰猪猪哈哈哈哈哈哈。爱你了啦小宝贝，周六的4级考试高分通过！！嘻嘻嘻爱你爱你爱你爱你。</h1>
     <h2>2020.12.8</h2>
     <h1>爱你小宝贝！！今天妞妞去做了4级的题目咯效果很棒的呀哈哈哈哈。好像下周就考试了哦，妞妞得加油哒。今天猪猪网站备案咯我也不懂多久可以哈哈哈哈哈可能还有好久吧。猪猪今天不知道咋的头晕晕的就从中午12点一只睡到了下午5点！！！！惊了哈哈哈哈哈不得不记录一下。就是那种睡得真的稀里糊涂的感觉😂现在还有有一点头痛的啦。可能是冷到咯。我老妈寄来了秋衣秋裤明天可以去拿，所以应该问题不大。妞妞自己也要注意保暖的呀。像刚才就跑去外面充热水袋。可能是冷索索的哦。然后就不理我咯哈哈哈哈哈可能跑回去去暖🦶🦶咯哈哈哈哈。真是可爱的小宝贝呢。猪猪爱你！今天就这样（水一水）。哈哈哈哈对啦对啦！妞妞今天写日记的时候还发现了猪猪和你一年前的这个时候还在吵架哈哈哈哈哈。其实我们都是在进步的啦，自然是越来越好滴。不过也很有意思的啦。记录我们的点点滴滴，然后妞妞又可以骂我咯，呜呜呜。嘻嘻嘻猪猪还是很乖哒。猪猪爱你！以后也爱你。让你在日记上写不来我的坏话噜噜噜</h1>
     <h2>2020.12.7</h2>
