--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <a href="./notes.html">猪猪的随记</a>
     <a href="./photo.html">照片墙</a>
     <h1>更新日志</h1>
+    <h2>2020.12.10</h2>
+    <h1>爱你耶我的小宝贝！今天猪猪下午忙起来说了让妞妞不开心的话啦，但是妞妞还是能够原谅猪猪哒嘻嘻嘻妞妞最好了啦！猪猪最爱妞妞咯，以后也会更加的乖哒嘻嘻嘻。妞妞哦4级考试倒计时2天！！要加油背单词的啦，刚才和妞妞检查单词来看，妞妞还是很棒哒。而且妞妞之前的时候，4级的题目做得还是很不错哒！继续加油。嘻嘻嘻。猪猪明天陪小宝贝起来学习，因为晚上要给战队里大一的新生讲神经网络的事情，所以还是要备课一下哒，不然说不通，那岂不是老脸蛋丢了啦哈哈哈哈。耍脾气还是归属脾气，但是育人为本的大事还是要认真哒。妞妞，猪猪最近所有的DDL都结束了啦！嘻嘻嘻不过星期六就有MFE和ENT的东西发布咯，MFE一个coursework，ENT剩下的百分之60的个人文章。所以还是很重要哒。妞妞准备到期末了啦！要和猪猪一起加油哦。对了啦，我最近在考虑我寒假参加的什么科研项目，让我的寒假也更加充实的啦！嘻嘻嘻猪猪爱你，我们一起进步咯加油小宝贝！</h1>
     <h2>2020.12.9</h2>
     <h1>爱你小宝贝！！猪猪明天就要去presentation啦！我们小组准备了很久哦，而且每一个人都上台演讲，大家准备得都很认真。（虽然每周一次的线下课他们一个都不来哈哈哈哈哈哈）但是还是出乎意料地大家都特别地用心积极。所以猪猪还是很开心的啦！希望我们明天能够获得一个好成绩嘻嘻嘻。妞妞，猪猪准备军训啦！还记得去年的时候，妞妞军训，还一直和猪猪说，好累但是还是很坚强滴坚持下来啦！见证了妞妞的成长哈哈哈哈。现在也到猪猪说。“妞妞，猪猪累，要安慰亲亲抱抱嘻嘻嘻”。那妞妞也要记得宝宝陪伴猪猪哦，好好安慰猪猪哈哈哈哈哈哈。爱你了啦小宝贝，周六的4级考试高分通过！！嘻嘻嘻爱你爱你爱你爱你。</h1>
     <h2>2020.12.8</h2>
