--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <a href="./notes.html">猪猪的随记</a>
     <a href="./photo.html">照片墙</a>
     <h1>更新日志</h1>
+    <h2>2020.12.11</h2>
+    <h1>爱你小宝贝！今天收获很多哒。细细给你品尝再加上对《丈夫得了抑郁症》做一番感想。晚上的时候，我回来的时候不是很开心嘛。然后妞妞就感觉到我不开心啦，但是又不知道说什么，那个时候，我就感觉挺难受的，感觉说为什么都不能在我难受的时候安慰我一下，就是用绝对的主动来带着我走，巴拉巴拉的。当然啦，最主要的还是因为他们，就是那种辛辛苦苦准备好也做好了准备要去干什么的时候，突然被截断的感觉就很不舒服。不过啦这不是重点，因为妞妞知道的咯，猪猪是乐观主义者，这种事情发发牢骚就没事的啦，然后我肯定就会好的。不过让我感受最深的是，如果按照以前我本来就可以自己就处理掉的（因为我真的很习惯自己一个人），虽然啦猪猪想从妞妞那里得到安慰，但是妞妞不怎么会主动说些乱七八糟的东西。虽然一开始猪猪可能有那么一点不开心说“为什么都不会主动说一大堆话来转移我注意力巴拉巴拉”的东西就哈哈哈哈。但是后来，我真的感受到了因为别人转变了我的情绪，我一直以来都是自己决定自己情绪，这一次被很多东西都给影响啦，妞妞一直陪着我咯然后很想安慰我，还有想到了《情迷解放西》里面温馨的场景，还有和我爸妈聊了一下天，还有那些大一的战队的和我说的咯，总之，在那一瞬间，好多东西，好多情感，突然就涌出来了。就是感觉，通了。😂😂妞妞你知道吧，就是那种，虽然结果都是我又开心啦，但是这中间的过程让我真的又有好多的情感交互，情感感知巴拉巴拉的。视野又开阔咯哈哈哈哈（妞妞肯定不懂我在说啥）好啦好啦，接下来说那个《丈夫得了抑郁症》。看完以后，两个感受啦。1.爱情。2.抑郁。先说抑郁啦，这就是在给我敲警钟，虽然看起来我很乐观也不可能得抑郁，但是还是在不断地提醒自己不能忽视这方面的东西啦，还是要正视。不然以后得了抑郁症就感觉天都塌了那可不行。还有的就是爱情啦，这种默默陪伴的爱情也是一种，很容易让人忽视的但是却是十分宝贵的爱情啦！爱你小宝贝，一直陪着猪猪咯，猪猪也要一直陪着小宝贝嘻嘻嘻。不离不弃一直爱你</h1>
     <h2>2020.12.10</h2>
     <h1>爱你耶我的小宝贝！今天猪猪下午忙起来说了让妞妞不开心的话啦，但是妞妞还是能够原谅猪猪哒嘻嘻嘻妞妞最好了啦！猪猪最爱妞妞咯，以后也会更加的乖哒嘻嘻嘻。妞妞哦4级考试倒计时2天！！要加油背单词的啦，刚才和妞妞检查单词来看，妞妞还是很棒哒。而且妞妞之前的时候，4级的题目做得还是很不错哒！继续加油。嘻嘻嘻。猪猪明天陪小宝贝起来学习，因为晚上要给战队里大一的新生讲神经网络的事情，所以还是要备课一下哒，不然说不通，那岂不是老脸蛋丢了啦哈哈哈哈。耍脾气还是归属脾气，但是育人为本的大事还是要认真哒。妞妞，猪猪最近所有的DDL都结束了啦！嘻嘻嘻不过星期六就有MFE和ENT的东西发布咯，MFE一个coursework，ENT剩下的百分之60的个人文章。所以还是很重要哒。妞妞准备到期末了啦！要和猪猪一起加油哦。对了啦，我最近在考虑我寒假参加的什么科研项目，让我的寒假也更加充实的啦！嘻嘻嘻猪猪爱你，我们一起进步咯加油小宝贝！</h1>
     <h2>2020.12.9</h2>
