--- a/index.html
+++ b/index.html
@@ -6,11 +6,8 @@
 </head>
 <body>
     <h1>我和小宝贝的网站</h1>
-    <p>简介：每天更新点小东东，顺便每天学点html来玩玩，最重要的还是tensorflow啦嘻嘻嘻</p>
-    <p>不知道小小宝贝多久会来看看呢？哈哈哈哈</p>
-    <p>（2020.11.12）打算新增一些板块，小宝说看网站有那种了解我的生活的感觉，预计新增一个随记小版块</p>
-    <a href="./notes.html">猪猪的随记</a>
-    <a href="./photo.html">照片墙</a>
+    <p>(2020.12.12)打算使用GO语言帮妞妞写一个windows或者手机上的软件集成一些常用功能，详见开发进度</p>
+    <a href="plan.html">开发进度</a>
     <h1>更新日志</h1>
     <h2>2020.12.11</h2>
     <h1>爱你小宝贝！今天收获很多哒。细细给你品尝再加上对《丈夫得了抑郁症》做一番感想。晚上的时候，我回来的时候不是很开心嘛。然后妞妞就感觉到我不开心啦，但是又不知道说什么，那个时候，我就感觉挺难受的，感觉说为什么都不能在我难受的时候安慰我一下，就是用绝对的主动来带着我走，巴拉巴拉的。当然啦，最主要的还是因为他们，就是那种辛辛苦苦准备好也做好了准备要去干什么的时候，突然被截断的感觉就很不舒服。不过啦这不是重点，因为妞妞知道的咯，猪猪是乐观主义者，这种事情发发牢骚就没事的啦，然后我肯定就会好的。不过让我感受最深的是，如果按照以前我本来就可以自己就处理掉的（因为我真的很习惯自己一个人），虽然啦猪猪想从妞妞那里得到安慰，但是妞妞不怎么会主动说些乱七八糟的东西。虽然一开始猪猪可能有那么一点不开心说“为什么都不会主动说一大堆话来转移我注意力巴拉巴拉”的东西就哈哈哈哈。但是后来，我真的感受到了因为别人转变了我的情绪，我一直以来都是自己决定自己情绪，这一次被很多东西都给影响啦，妞妞一直陪着我咯然后很想安慰我，还有想到了《情迷解放西》里面温馨的场景，还有和我爸妈聊了一下天，还有那些大一的战队的和我说的咯，总之，在那一瞬间，好多东西，好多情感，突然就涌出来了。就是感觉，通了。😂😂妞妞你知道吧，就是那种，虽然结果都是我又开心啦，但是这中间的过程让我真的又有好多的情感交互，情感感知巴拉巴拉的。视野又开阔咯哈哈哈哈（妞妞肯定不懂我在说啥）好啦好啦，接下来说那个《丈夫得了抑郁症》。看完以后，两个感受啦。1.爱情。2.抑郁。先说抑郁啦，这就是在给我敲警钟，虽然看起来我很乐观也不可能得抑郁，但是还是在不断地提醒自己不能忽视这方面的东西啦，还是要正视。不然以后得了抑郁症就感觉天都塌了那可不行。还有的就是爱情啦，这种默默陪伴的爱情也是一种，很容易让人忽视的但是却是十分宝贵的爱情啦！爱你小宝贝，一直陪着猪猪咯，猪猪也要一直陪着小宝贝嘻嘻嘻。不离不弃一直爱你</h1>
