--- a/index.html
+++ b/index.html
@@ -543,6 +543,6 @@ header, .context-menu, .megamenu-content, footer{
 </style>
 </head>
 <body class='typora-export'>
-<div id='write'  class=''><h1><a name="写给小宝贝的网站" class="md-header-anchor"></a><span>写给小宝贝的网站</span></h1><h2><a name="导航" class="md-header-anchor"></a><span>导航</span></h2><figure><table><thead><tr><th><span>索引</span></th><th><span>内容</span></th><th><span>链接</span></th></tr></thead><tbody><tr><td><span>主页</span></td><td><span>记录每天发生的小事情</span></td><td><a href='./main.html'><span>主页</span></a></td></tr></tbody></table></figure><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p></div>
+<div id='write'  class=''><h1><a name="写给小宝贝的网站" class="md-header-anchor"></a><span>写给小宝贝的网站</span></h1><h2><a name="导航" class="md-header-anchor"></a><span>导航</span></h2><figure><table><thead><tr><th><span>索引</span></th><th><span>内容</span></th><th><span>链接</span></th></tr></thead><tbody><tr><td><span>主页</span></td><td><span>记录每天发生的小事情</span></td><td><a href='./main.html'><span>主页</span></a></td></tr><tr><td><span>奋斗的小猪猪</span></td><td><span>给妞妞看看你的小猪猪每天在干啥</span></td><td><a href='./work.html'><span>奋斗的小猪猪</span></a></td></tr></tbody></table></figure><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p></div>
 </body>
 </html>
