--- a/contact.html
+++ b/contact.html
@@ -548,6 +548,6 @@ header, .context-menu, .megamenu-content, footer{
 </style>
 </head>
 <body class='typora-export'>
-<div id='write'  class=''><h1><a name="lots-of-things" class="md-header-anchor"></a><span>Lots of Things</span></h1><h2><a name="contacts" class="md-header-anchor"></a><span>Contacts</span></h2><figure><table><thead><tr><th><span>name</span></th><th><span>who</span></th><th><span>contacts</span></th><th><span>some thing about he/she</span></th></tr></thead><tbody><tr><td><span>张川惠子</span></td><td><span>My Girl</span></td><td><span>Wechat</span></td><td><span>My Love </span></td></tr></tbody></table></figure><p>&nbsp;</p></div>
+<div id='write'  class=''><h1><a name="lots-of-things" class="md-header-anchor"></a><span>Lots of Things</span></h1><h2><a name="contacts" class="md-header-anchor"></a><span>Contacts</span></h2><figure><table><thead><tr><th><span>name</span></th><th><span>who</span></th><th><span>contacts</span></th><th><span>some thing about he/she</span></th></tr></thead><tbody><tr><td><span>张川惠子</span></td><td><span>My Girl</span></td><td><span>Wechat</span></td><td><span>My Love</span></td></tr></tbody></table></figure><h2><a name="thing-to-remenber" class="md-header-anchor"></a><span>thing to remenber </span></h2><figure><table><thead><tr><th><span>date</span></th><th><span>content</span></th></tr></thead><tbody><tr><td><span>寒假</span></td><td><span>妞妞想去万象城滑冰</span></td></tr></tbody></table></figure><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p></div>
 </body>
 </html>
